   * Added support for SLF to [terrain]. Note that the SLF's terrain= key is
     not valid; terrain= specifies the new terrain instead like it used to do.
     Filtering for terrain can be done with the [terrain][and]terrain=
     workaround.
   * Renamed [removeitem] to [remove_item].
   * added new parameters directional_x and directional_y to animations
   * Made it so that units affected by [hide_unit] don't appear on the minimap (FR #16796)
 * Miscellaneous and bugfixes:
   * Changed: Lowered severity of some gui2 timer log messages.
   * Units created in debug mode now play their recruit animation (FR #16766).
   * Fixed: properly update cmake revision numbers (bug #16483)
   * Fixed: hotkeys dialog in editor is big enough to display them correctly.

Version 1.9.1:
 * AI:
   * Fixed bug #16585: made AI move in targeting phase even if for some of the
     'best' units moves to targets are impossible
 * Campaigns:
   * Unified the campaign description of the number of scenarios. Now the
     number reflects only the battle scenarios of each campaign.
   * A Tale of Two Brothers:
     * New portraits for Arne and Bjarn.
   * Dead Water:
     * Fixed the last scenario not working due to an 'unknown scenario' error.
   * Descent into Darkness:
     * Fixed the 'A Small Favor' scenarios being unbeatable.
   * Eastern Invasion:
     * Increased Owaec's hitpoints and attack stats, and added a new weapon
       special to his morningstar on levels 2 and 3.
   * Legend of Wesmere:
     * Splitted the multiplayer port into five chapters with 3 difficult levels
       each.
       * (Beta)  Chapter one, a two player campaign, ends after scenario 3.
       * (Beta)  Chapter two, a three player campaign, ends after scenario 7.
       * (Alpha)  Chapter three, a four player campaign, ends after scenario 13.
       * (Alpha) Chapter four, a four player campaign, ends after scenario 17.
       * (Alpha) Chapter five, a two player campaign, ends with the single