@@ -61,6 +61,7 @@ Version 1.9.1+svn:
      workaround.
    * Renamed [removeitem] to [remove_item].
    * added new parameters directional_x and directional_y to animations
+   * added new parameters auto_vflip and auto_hflip to animations
    * Made it so that units affected by [hide_unit] don't appear on the minimap (FR #16796)
  * Miscellaneous and bugfixes:
    * Changed: Lowered severity of some gui2 timer log messages.
